--- a/src/stylesheets/Lungo.widgets.less
+++ b/src/stylesheets/Lungo.widgets.less
@@ -39,11 +39,11 @@
     padding: 8px 8px;
 }
 
-.icon.small {
-    font-size: 20px !important;
-    height: 16px !important;
-    width: 16px !important;
-    line-height: 16px !important;
+
+.icon {
+    &.small {
+        font-size: 1.3em;
+    }
 }
 
 .framed { border: 2px solid #fff;}
