--- a/src/stylesheets/Lungo.layout.list.less
+++ b/src/stylesheets/Lungo.layout.list.less
@@ -40,7 +40,7 @@
             transform: rotate(45deg);
         }
 
-        & .icon, & img {
+        & .icon:not(.small), & img {
             float: left;
             width: 32px;
             height: 32px;
@@ -78,21 +78,14 @@
     //@todo: Refactor li.anchor stylesheet;
     & li.anchor {
         font-size: 0.85em;
-        padding: 4px 4px 3px;
+        font-weight: bold;
+        padding: 0px 4px;
+        line-height: 1.5em;
 
-        & .icon {
-            width: 14px !important;
-            height: 14px !important;
-            margin-right: 2px !important;
-            font-size:  1.6em !important;
-            line-height: 14px !important;
+        & .icon.small {
+            margin-right: 2px;
         }
 
         & .bubble { display: none; }
-    }
-
-    & .tip {
-        font-size: 0.85em;
-        font-weight: bold;
     }
 }
