--- a/src/stylesheets/Lungo.layout.list.less
+++ b/src/stylesheets/Lungo.layout.list.less
@@ -68,10 +68,10 @@
     }
 
     & .onright .icon, & small .icon {
-        height: 13px;
-        width: auto;
-        margin-right: 1px;
-        font-size: 1.2em;
+        height: 13px !important;
+        width: 13px !important;
+        margin-right: 1px !important;
+        font-size: 1.2em !important;
         line-height: 0.8em;
     }
 
