Changes on stylesheets list

--- a/src/stylesheets/Lungo.layout.list.less
+++ b/src/stylesheets/Lungo.layout.list.less
@@ -52,8 +52,8 @@
 
         &.thumb img {
            margin: -8px 8px -8px -8px;
-           height: 46px;
-           width:46px;
+           height: 46px !important;
+           width:46px !important;
         }
     }
 
