--- a/src/stylesheets/constants.less
+++ b/src/stylesheets/constants.less
@@ -2,6 +2,7 @@
 
 /* DIMENSIONS */
 @header-height: 42px;
+    @header_nav_height: 41px;
     @header_groupbar_height: 30px;
 
 @header_footer_height: 40px;
