--- a/src/stylesheets/Lungo.widgets.loading.less
+++ b/src/stylesheets/Lungo.widgets.loading.less
@@ -15,13 +15,20 @@
     height: 1em;
     width: 1em;
     margin-left: -.5em;
+    margin-top: .5em;
+
     .transform-origin(.5em .5em);
     -webkit-animation:  rotatingLoader .5s  infinite  linear;
     -moz-animation:  rotatingLoader .5s  infinite  linear;
-
     font-size: 48px;
 
-    &.small { font-size: 20px; }
+    &.disable {
+        -webkit-animation: none;
+        -moz-animation: none;
+        display: none
+    }
+
+    &.small { font-size: 20px;}
     &.big { font-size: 64px; }
 
     & > span {
@@ -78,6 +85,10 @@
         &.right::after  {  background-color: rgba(255,255,255,0.20); }
         &.top::before   {  background-color: rgba(255,255,255,0.15); }
     }
+}
+
+section.current .loading {
+
 }
 
 @-webkit-keyframes rotatingLoader{
