Loading element in header, footer & article

--- a/src/stylesheets/Lungo.layout.article.less
+++ b/src/stylesheets/Lungo.layout.article.less
@@ -88,9 +88,10 @@ article {
             width: 66.7%;
         }
     }
-}
 
-a {
+    & > .loading {
+        //margin-top: 10%;
+    }
 }
 
 header:not(.extended) ~ article { top: @header-height; }
