Minimal changes in button stylesheet

--- a/src/stylesheets/Lungo.widgets.button.less
+++ b/src/stylesheets/Lungo.widgets.button.less
@@ -18,7 +18,7 @@ a.button {
 
     background: #5a5a5a;
 
-    font-size: 15px;
+    font-size: 14px;
     text-align: center;
     text-decoration: none;
     line-height: 40px;
@@ -38,10 +38,11 @@ a.button {
     & .icon {
         position: relative;
         top: 3px;
-        height: 16px;
-        width: 16px;
-        font-size: 22px;
-        line-height: 17px;
+        height: 18px;
+        width: 18px;
+        font-size: 18px;
+        line-height: 18px;
+        margin-right: 4px;
     }
 
     & img {
@@ -56,9 +57,6 @@ a.button {
         & .icon {
             margin: 8px -18px 0 12px;
             float: left;
-            font-size: 24px;
-            height: 18px;
-            width: 18px;
         }
     }
 }
