--- a/src/stylesheets/Lungo.widgets.form.less
+++ b/src/stylesheets/Lungo.widgets.form.less
@@ -10,20 +10,21 @@
 @import "constants.less";
 @import "mixins.less";
 
+@input-height: 29px;
+
 form, .form { }
 
 label {
     font-size: 0.9em;
-    line-height: 29px;
 }
 
 input:not([type=checkbox]), textarea, select {
     display: block;
     width: 97%;
     margin: 0 0 2px;
-    padding: 1.5%;
-
-    font-size:  1.15em;
+    padding: 0% 1.5% ;
+    height: @input-height;
+    font-size: 14px;
     font-weight: bold;
 
     -webkit-appearance: none;
@@ -54,7 +55,7 @@ input[type=search] {
 
 select {
     width: 100%;
-    height: 29px;
+    height: @input-height;
 }
 
 label.select {
@@ -69,8 +70,8 @@ label.select {
     top: 0;
     right: 0;
     bottom: 0;
-    height:29px;
-    width: 29px;
+    height: @input-height;
+    width: @input-height;
 
     content: "▼";
     pointer-events:none;
@@ -88,7 +89,7 @@ label.select {
 
 input[type="checkbox"], input[type="radio"]{
     width: 82px;
-    height: 29px;
+    height: @input-height;
     z-index: 2;
 }
 
@@ -157,7 +158,7 @@ input[type="checkbox"] + span,
     height: 27px;
     position: relative;
     font-size: 11px;
-    line-height: 29px;
+    line-height: @input-height;
     font-weight: bold;
     text-transform: uppercase;
     text-indent: -9999px;
@@ -246,7 +247,7 @@ input[type="range"] {
 }
 
 .big .progress .bar {
-    height:  29px;
+    height:  @input-height;
     line-height: 30px;
 }
 /* @end */
