--- a/src/stylesheets/css/Lungo.widgets.icon.css
+++ b/src/stylesheets/css/Lungo.widgets.icon.css
@@ -46,6 +46,7 @@
 .icon.cancel:before{content:"\0054";}
 .icon.checkmark:before{content:"\0051";}
 .icon.multiply:before{content:"\0055";}
+.icon.close:before{content:"\0055";}
 .icon.plus:before{content:"\0056";}
 .icon.minus:before{content:"\0057";}
 .icon.left:before{content:"\0058";}
