--- a/src/stylesheets/css/Lungo.layout.css
+++ b/src/stylesheets/css/Lungo.layout.css
@@ -1,1 +1,165 @@
-section{position:fixed;left:0;top:0;width:100%;height:100%;z-index:0;display:none;visibility:hidden;-webkit-transition:all 250ms cubic-bezier(0.39,0.575,0.565,1);-moz-transition:all 250ms cubic-bezier(0.39,0.575,0.565,1);-ms-transition:all 250ms cubic-bezier(0.39,0.575,0.565,1);-o-transition:all 250ms cubic-bezier(0.39,0.575,0.565,1);transition:all 250ms cubic-bezier(0.39,0.575,0.565,1);-webkit-transition:all 250ms cubic-bezier(0.39,0.575,0.565,1);-moz-transition:all 250ms cubic-bezier(0.39,0.575,0.565,1);-ms-transition:all 250ms cubic-bezier(0.39,0.575,0.565,1);-o-transition:all 250ms cubic-bezier(0.39,0.575,0.565,1);transition:all 250ms cubic-bezier(0.39,0.575,0.565,1);-webkit-backface-visibility:hidden}section:first-child,section.show{z-index:1;display:block;visibility:visible}section.hide{z-index:0;display:none;visibility:hidden}section.slide,section.pop{display:block!important}section.slide{-webkit-transform:translate(100%,0);-moz-transform:translate(100%,0);-ms-transform:translate(100%,0);-o-transform:translate(100%,0);transform:translate(100%,0);-webkit-transform:translate(100%,0);-moz-transform:translate(100%,0);-ms-transform:translate(100%,0);-o-transform:translate(100%,0);transform:translate(100%,0);visibility:visible!important}section.slide:first-child,section.slide.show{-webkit-transform:translate(0%,0);-moz-transform:translate(0%,0);-ms-transform:translate(0%,0);-o-transform:translate(0%,0);transform:translate(0%,0);-webkit-transform:translate(0%,0);-moz-transform:translate(0%,0);-ms-transform:translate(0%,0);-o-transform:translate(0%,0);transform:translate(0%,0)}section.slide.hide{-webkit-transform:translate(-100%,0);-moz-transform:translate(-100%,0);-ms-transform:translate(-100%,0);-o-transform:translate(-100%,0);transform:translate(-100%,0);-webkit-transform:translate(-100%,0);-moz-transform:translate(-100%,0);-ms-transform:translate(-100%,0);-o-transform:translate(-100%,0);transform:translate(-100%,0)}section.pop{opacity:0;-webkit-transform:scale(1.15);-moz-transform:scale(1.15);-ms-transform:scale(1.15);-o-transform:scale(1.15);transform:scale(1.15);-webkit-transform:scale(1.15);-moz-transform:scale(1.15);-ms-transform:scale(1.15);-o-transform:scale(1.15);transform:scale(1.15)}section.pop:first-child,section.pop.show{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1);-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1);opacity:1}section.pop.hide{-webkit-transform:scale(0.9);-moz-transform:scale(0.9);-ms-transform:scale(0.9);-o-transform:scale(0.9);transform:scale(0.9);-webkit-transform:scale(0.9);-moz-transform:scale(0.9);-ms-transform:scale(0.9);-o-transform:scale(0.9);transform:scale(0.9);opacity:0}header,footer{position:fixed;left:0;width:100%;height:42px;display:block;z-index:2;line-height:42px;overflow:hidden}header{top:0}header .title{margin-left:4px;float:left;z-index:-1;font-size:15px;font-weight:bold}header .title.centered{position:absolute;left:0;right:0;text-align:center;display:inline-block}header .title.with-subtitle{line-height:20px;padding-top:4px}header .subtitle{margin-left:4px;display:block;font-size:11px;line-height:11px;width:100%}footer{bottom:0}
+/**
+ * Stylesheet
+ *
+ * @namespace LUNGO
+ * @class Layout
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
+/* DIMENSIONS */
+/* COLORS */
+section {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  display: none;
+  visibility: hidden;
+  -webkit-transition: all 250ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -moz-transition: all 250ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -ms-transition: all 250ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -o-transition: all 250ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  transition: all 250ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -webkit-transition: all 250ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -moz-transition: all 250ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -ms-transition: all 250ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -o-transition: all 250ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  transition: all 250ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -webkit-backface-visibility: hidden;
+}
+section:first-child,
+section.show {
+  z-index: 1;
+  display: block;
+  visibility: visible;
+}
+section.hide {
+  z-index: 0;
+  display: none;
+  visibility: hidden;
+}
+section[data-transition] {
+  display: block !important;
+}
+section[data-transition="pop"] {
+  opacity: 0;
+  -webkit-transform: scale(1.15);
+  -moz-transform: scale(1.15);
+  -ms-transform: scale(1.15);
+  -o-transform: scale(1.15);
+  transform: scale(1.15);
+  -webkit-transform: scale(1.15);
+  -moz-transform: scale(1.15);
+  -ms-transform: scale(1.15);
+  -o-transform: scale(1.15);
+  transform: scale(1.15);
+}
+section[data-transition="pop"]:first-child,
+section[data-transition="pop"].show {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+  opacity: 1;
+}
+section[data-transition="pop"].hide {
+  -webkit-transform: scale(0.9);
+  -moz-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  -o-transform: scale(0.9);
+  transform: scale(0.9);
+  -webkit-transform: scale(0.9);
+  -moz-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  -o-transform: scale(0.9);
+  transform: scale(0.9);
+  opacity: 0;
+}
+section[data-transition="slide"] {
+  -webkit-transform: translate(100%, 0);
+  -moz-transform: translate(100%, 0);
+  -ms-transform: translate(100%, 0);
+  -o-transform: translate(100%, 0);
+  transform: translate(100%, 0);
+  -webkit-transform: translate(100%, 0);
+  -moz-transform: translate(100%, 0);
+  -ms-transform: translate(100%, 0);
+  -o-transform: translate(100%, 0);
+  transform: translate(100%, 0);
+  visibility: visible !important;
+}
+section[data-transition="slide"]:first-child,
+section[data-transition="slide"].show {
+  -webkit-transform: translate(0%, 0);
+  -moz-transform: translate(0%, 0);
+  -ms-transform: translate(0%, 0);
+  -o-transform: translate(0%, 0);
+  transform: translate(0%, 0);
+  -webkit-transform: translate(0%, 0);
+  -moz-transform: translate(0%, 0);
+  -ms-transform: translate(0%, 0);
+  -o-transform: translate(0%, 0);
+  transform: translate(0%, 0);
+}
+section[data-transition="slide"].hide {
+  -webkit-transform: translate(-100%, 0);
+  -moz-transform: translate(-100%, 0);
+  -ms-transform: translate(-100%, 0);
+  -o-transform: translate(-100%, 0);
+  transform: translate(-100%, 0);
+  -webkit-transform: translate(-100%, 0);
+  -moz-transform: translate(-100%, 0);
+  -ms-transform: translate(-100%, 0);
+  -o-transform: translate(-100%, 0);
+  transform: translate(-100%, 0);
+}
+header,
+footer {
+  position: fixed;
+  left: 0;
+  width: 100%;
+  height: 42px;
+  display: block;
+  z-index: 2;
+  line-height: 42px;
+  overflow: hidden;
+}
+header {
+  top: 0;
+}
+header .title {
+  margin-left: 4px;
+  float: left;
+  z-index: -1;
+  font-size: 15px;
+  font-weight: bold;
+}
+header .title.centered {
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  text-align: center;
+  display: inline-block;
+}
+header .title.with-subtitle {
+  line-height: 20px;
+  padding-top: 4px;
+}
+header .subtitle {
+  margin-left: 4px;
+  display: block;
+  font-size: 11px;
+  line-height: 11px;
+  width: 100%;
+}
+footer {
+  bottom: 0;
+}
