--- a/src/stylesheets/Lungo.widgets.less
+++ b/src/stylesheets/Lungo.widgets.less
@@ -29,8 +29,8 @@
     }
 }
 
-.onleft { float: left; }
-.onright { float: right;}
+.left { float: left; }
+.right { float: right;}
 .hidden { display: none; }
 .indented > * {
     margin: 10px;
