--- a/src/stylesheets/css/Lungo.widgets.form.css
+++ b/src/stylesheets/css/Lungo.widgets.form.css
@@ -1,27 +1,262 @@
-
-label{font-size:0.9em;}
-input:not([type=checkbox]),textarea,select{display:block;width:97%;margin:0 0 2px;padding:0% 1.5% ;height:29px;font-size:14px;font-weight:bold;-webkit-appearance:none;-webkit-user-select:text;-webkit-font-smoothing:antialiased;}
-input[type=search]{width:86%;}input[type=search] +.button{float:right;padding:0px;width:32px;height:30px;}input[type=search] +.button .icon{font-size:22px !important;line-height:30px;}
-select{width:100%;height:29px;}
-label.select{position:relative;display:inline-block;width:100%;}
-.select:after{text-align:center;position:absolute;top:0;right:0;bottom:0;height:29px;width:29px;content:"▼";pointer-events:none;line-height:31px;}
-.no-pointer-events .select:after{content:none;}
-input[type="checkbox"],input[type="radio"]{width:82px;height:29px;z-index:2;}
-input[type="checkbox"]+span::after,input[type="radio"]+span::after{content:"OFF";}
-input[type="checkbox"]:checked+span::after,input[type="radio"]:checked+span::after{content:"ON";}
-input[type="checkbox"]+span,input[type="radio"]+span,input[type="checkbox"]+span::before,input[type="radio"]+span::before,input[type="checkbox"]+span::after,input[type="radio"]+span::after{display:inline-block;}
-input[type="checkbox"]+span::before,input[type="radio"]+span::before,input[type="checkbox"]+span::after,input[type="radio"]+span::after,input[type="checkbox"]:checked+span::before,input[type="radio"]:checked+span::before,input[type="checkbox"]:checked+span::after,input[type="radio"]:checked+span::after{top:0;}
-input[type="checkbox"]+span::after,input[type="radio"]+span::after,input[type="checkbox"]:checked+span::before,input[type="radio"]:checked+span::before{right:0;}
-input[type="checkbox"]+span::before,input[type="radio"]+span::before,input[type="checkbox"]:checked+span::after,input[type="radio"]:checked+span::after{left:0;}
-input[type="checkbox"],input[type="radio"],input[type="checkbox"]+span::before,input[type="radio"]+span::before,input[type="checkbox"]+span::after,input[type="radio"]+span::after{position:absolute;}
-input[type="checkbox"],input[type="radio"]{-webkit-opacity:0;opacity:0;}
-input[type="checkbox"]+span,input[type="radio"]+span{width:82px;height:27px;position:relative;font-size:11px;line-height:29px;font-weight:bold;text-transform:uppercase;text-indent:-9999px;}
-input[type="checkbox"]+span::before,input[type="radio"]+span::before{content:"";width:41px;height:27px;}
-input[type="checkbox"]+span::after,input[type="radio"]+span::after{text-indent:0;width:41px;height:27px;text-align:center;}
-input[type="checkbox"]:checked+span::before,input[type="radio"]:checked+span::before{left:auto;}
-input[type="checkbox"]:checked+span::after,input[type="radio"]:checked+span::after{height:27px;}
-input[type="range"]{-webkit-appearance:none;height:15px;width:100%;outline:none;position:relative;padding:0px;margin:0px;border:0;cursor:ew-resize;}input[type="range"]::-webkit-slider-thumb{-webkit-appearance:none;position:relative;z-index:1;top:-1px;width:24px;height:24px;}
-.progress{width:100%;margin-bottom:8px;}.progress .labels{font-size:1.0em;display:block;}.progress .labels span:last-child{float:right;}
-.progress .bar{height:15px;line-height:15px;display:block;}.progress .bar .value{display:block;height:inherit;width:0%;-webkit-transition:width 500ms cubic-bezier(0.39, 0.575, 0.565, 1);}.progress .bar .value .label{float:right;margin-right:4px;font-size:0.75em;}
-.big .progress .bar{height:29px;line-height:30px;}
-@media screen and (-webkit-min-device-pixel-ratio:0){.custom-select select{padding-right:30px;}}
+/**
+ * Stylesheet
+ *
+ * @namespace LUNGO.Widgets
+ * @class Form
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
+/* DIMENSIONS */
+/* COLORS */
+label {
+  font-size: 0.9em;
+}
+input:not([type=checkbox]),
+textarea,
+select {
+  display: block;
+  width: 97%;
+  padding: 1% 1.5% ;
+  height: 29px;
+  font-size: 14px;
+  font-weight: bold;
+  -webkit-appearance: none;
+  -webkit-user-select: text;
+  -webkit-font-smoothing: antialiased;
+}
+input:not([type=checkbox])  + input,
+textarea  + input,
+select  + input {
+  background: red !important;
+}
+input:not([type=checkbox]).rounded,
+textarea.rounded,
+select.rounded {
+  margin: 0px;
+}
+input:not([type=checkbox]).rounded:first-of-type,
+textarea.rounded:first-of-type,
+select.rounded:first-of-type {
+  -webkit-border-radius: 8px 8px 0px 0px;
+  -moz-border-radius: 8px 8px 0px 0px;
+  border-radius: 8px 8px 0px 0px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 8px 8px 0px 0px;
+  -moz-border-radius: 8px 8px 0px 0px;
+  border-radius: 8px 8px 0px 0px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+}
+input:not([type=checkbox]).rounded:last-of-type,
+textarea.rounded:last-of-type,
+select.rounded:last-of-type {
+  -webkit-border-radius: 0px 0px 8px 8px;
+  -moz-border-radius: 0px 0px 8px 8px;
+  border-radius: 0px 0px 8px 8px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 0px 0px 8px 8px;
+  -moz-border-radius: 0px 0px 8px 8px;
+  border-radius: 0px 0px 8px 8px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+}
+textarea {
+  min-height: 48px;
+}
+/* @group search */
+input[type=search] {
+  width: 86%;
+}
+input[type=search]  + .button {
+  float: right;
+  padding: 0px;
+  width: 32px;
+  height: 30px;
+}
+input[type=search]  + .button .icon {
+  font-size: 22px !important;
+  line-height: 30px;
+}
+/* @end */
+/* @group select */
+select {
+  width: 100%;
+  height: 29px;
+}
+label.select {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+.select:after {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  height: 29px;
+  width: 29px;
+  content: "▼";
+  pointer-events: none;
+  line-height: 31px;
+}
+.no-pointer-events .select:after {
+  content: none;
+}
+/* @end */
+/* @group switch */
+input[type="checkbox"],
+input[type="radio"] {
+  width: 82px;
+  height: 29px;
+  z-index: 2;
+}
+input[type="checkbox"] + span::after,
+input[type="radio"] + span::after {
+  content: "OFF";
+}
+input[type="checkbox"]:checked + span::after,
+input[type="radio"]:checked + span::after {
+  content: "ON";
+}
+input[type="checkbox"] + span,
+input[type="radio"] + span,
+input[type="checkbox"] + span::before,
+input[type="radio"] + span::before,
+input[type="checkbox"] + span::after,
+input[type="radio"] + span::after {
+  display: inline-block;
+}
+input[type="checkbox"] + span::before,
+input[type="radio"] + span::before,
+input[type="checkbox"] + span::after,
+input[type="radio"] + span::after,
+input[type="checkbox"]:checked + span::before,
+input[type="radio"]:checked + span::before,
+input[type="checkbox"]:checked + span::after,
+input[type="radio"]:checked + span::after {
+  top: 0;
+}
+input[type="checkbox"] + span::after,
+input[type="radio"] + span::after,
+input[type="checkbox"]:checked + span::before,
+input[type="radio"]:checked + span::before {
+  right: 0;
+}
+input[type="checkbox"] + span::before,
+input[type="radio"] + span::before,
+input[type="checkbox"]:checked + span::after,
+input[type="radio"]:checked + span::after {
+  left: 0;
+}
+input[type="checkbox"],
+input[type="radio"],
+input[type="checkbox"] + span::before,
+input[type="radio"] + span::before,
+input[type="checkbox"] + span::after,
+input[type="radio"] + span::after {
+  position: absolute;
+}
+input[type="checkbox"],
+input[type="radio"] {
+  -webkit-opacity: 0;
+  opacity: 0;
+}
+input[type="checkbox"] + span,
+input[type="radio"] + span {
+  width: 82px;
+  height: 27px;
+  position: relative;
+  font-size: 11px;
+  line-height: 29px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-indent: -9999px;
+}
+input[type="checkbox"] + span::before,
+input[type="radio"] + span::before {
+  content: "";
+  width: 41px;
+  height: 27px;
+}
+input[type="checkbox"] + span::after,
+input[type="radio"] + span::after {
+  text-indent: 0;
+  width: 41px;
+  height: 27px;
+  text-align: center;
+}
+input[type="checkbox"]:checked + span::before,
+input[type="radio"]:checked + span::before {
+  left: auto;
+}
+input[type="checkbox"]:checked + span::after,
+input[type="radio"]:checked + span::after {
+  height: 27px;
+}
+/* @end */
+/* @group range */
+input[type="range"] {
+  -webkit-appearance: none;
+  height: 15px;
+  width: 100%;
+  outline: none;
+  position: relative;
+  padding: 0px;
+  margin: 0px;
+  border: 0;
+  cursor: ew-resize;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  position: relative;
+  z-index: 1;
+  top: -1px;
+  width: 24px;
+  height: 24px;
+}
+/* @end */
+/* @group progress */
+.progress {
+  width: 100%;
+  margin-bottom: 8px;
+}
+.progress .labels {
+  font-size: 1.0em;
+  display: block;
+}
+.progress .labels span:last-child {
+  float: right;
+}
+.progress .bar {
+  height: 15px;
+  line-height: 15px;
+  display: block;
+}
+.progress .bar .value {
+  display: block;
+  height: inherit;
+  width: 0%;
+  -webkit-transition: width 500ms cubic-bezier(0.39, 0.575, 0.565, 1);
+}
+.progress .bar .value .label {
+  float: right;
+  margin-right: 4px;
+  font-size: 0.75em;
+}
+.big .progress .bar {
+  height: 29px;
+  line-height: 30px;
+}
+/* @end */
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  .custom-select select {
+    padding-right: 30px;
+  }
+}
